Chance fonts to the score and message text and implement color change in the message

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Baloo+Bhai|Bangers|Mukta|Oxygen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Baloo+Bhai|Bungee+Inline|Orbitron|Passion+One|Press+Start+2P|Wallpoet|Teko|Bangers|Mukta|Oxygen&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bungee+Inline&family=Orbitron:wght@400;500&family=Passion+One:wght@400;700&family=Press+Start+2P&family=Teko:wght@300;400;500&family=Wallpoet&display=swap" rel="stylesheet"> -->
 
     <title>The Clicky Game</title>
   </head>
